--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,35 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Your Title"
-        android:textColor="#008080"  
-        android:textSize="24sp"/>
-
-    <Button
-        android:id="@+id/maroon_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Maroon Button"
-        android:layout_below="@id/title"
-        android:background="#800000"/>
-
-</RelativeLayout>
-
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="DS2 TERMINAL: ACTIVE"
-        android:textSize="24sp" />
-</LinearLayout>
+        android:layout_gravity="center"
+        android:text="DS2 TERMINAL" />
+</FrameLayout>
